add directory for html file about me

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,13 +7,17 @@
 </head>
 <body>
     <header>
+        <h3>Karan's Website</h3>
+        <a href="index.html">Home</a>
+        <a href="/my-links/aboutme.html">About Me</a>
+        <a href="../odin-recipes/index.html">My practice</a>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
