add images and complete html page

--- a/index.html
+++ b/index.html
@@ -7,17 +7,47 @@
 </head>
 <body>
     <header>
-        <h3>Karan's Website</h3>
+        <h2>Karan's Website</h2>
         <a href="index.html">Home</a>
-        <a href="/my-links/aboutme.html">About Me</a>
+        <a href="./my-links/aboutme.html">About Me</a>
         <a href="../odin-recipes/index.html">My practice</a>
+        <div>
+            <div>
+                <p>This website is about my Vision</p>
+                <p>I have started learning coding because I want to build a music app that will become a threat to Spotify, also because i want to be rich.</p>
+                <button>Sign up</button>
+            </div>
+            <div>
+                <img src="./images/sunset-country-road-stockcake.jpg" alt=" straight Road in nature during Sunset" height="200" width="350">
+            </div>
 
+        </div>
     </header>
     <main>
+        <p>Some of my visionary ideas.</p>
+        <div>
+            <div><img src="./images/grit.png" alt="grit written here" height="100" width="100"></div>
+            <div><img src="./images/kisong.png" alt="kisong written here" height="100" width="100"></div>
+            <div><img src="./images/AIVA.png" alt="aiva written here" height="100" width="100"></div>
+            <div><img src="./images/ki.png" alt="hexgonical dotted logo with Ki company written below" height="100" width="100"></div>
 
+        </div>
+        <section>
+            <p>
+                Do not think that what is hard for you to master is humanly impossible; but if a thing is humanly possible, consider it to be within your reach.
+            </p>
+            <p>Marcus Aurelius</p>
+        </section>
+        <div>
+            <div>
+                <p>Motivation Button!</p>
+                <p>Click this Button to motivate me to achieve my visionary dream</p>
+            </div>
+            <div><button>Motivate</button></div>
+        </div>
     </main>
     <footer>
-
+       <p>Copyright &copy; Ki_Karan 2025 </p> 
     </footer>
 </body>
 </html>
