add class to div's add stylesheet to header & main

--- a/index.html
+++ b/index.html
@@ -4,39 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h2>Karan's Website</h2>
-        <a href="index.html">Home</a>
-        <a href="./my-links/aboutme.html">About Me</a>
-        <a href="../odin-recipes/index.html">My practice</a>
-        <div>
-            <div>
-                <p>This website is about my Vision</p>
+    <header class="header" >
+    <div class="inline-wrapper">
+        <div class="hero-text"><p>Karan's Website</p></div>
+        <div class="hero-links">
+            <a href="index.html">Home</a>
+            <a href="./my-links/aboutme.html">About Me</a>
+            <a href="../odin-recipes/index.html">My practice</a>
+        </div>
+    </div>
+    <div class="header-div">
+            <div class="child1">
+                <p class="head">This website is about my Vision</p>
                 <p>I have started learning coding because I want to build a music app that will become a threat to Spotify, also because i want to be rich.</p>
-                <button>Sign up</button>
-            </div>
-            <div>
-                <img src="./images/sunset-country-road-stockcake.jpg" alt=" straight Road in nature during Sunset" height="200" width="350">
+                <button class="signup-button">Sign up</button>
+    </div>
+            <div class="child2">
+                <img src="./images/sunset-country-road-stockcake.jpg" alt=" straight Road in nature during Sunset" height="200" width="430">
             </div>
 
         </div>
     </header>
     <main>
-        <p>Some of my visionary ideas.</p>
-        <div>
-            <div><img src="./images/grit.png" alt="grit written here" height="100" width="100"></div>
-            <div><img src="./images/kisong.png" alt="kisong written here" height="100" width="100"></div>
-            <div><img src="./images/AIVA.png" alt="aiva written here" height="100" width="100"></div>
-            <div><img src="./images/ki.png" alt="hexgonical dotted logo with Ki company written below" height="100" width="100"></div>
+        <p class="main-txt">Some of my visionary ideas.</p>
+        <div class="main-container">
+
+            <div class="item1">
+                <div class="img1"><img src="./images/grit2.png" alt="grit written here" height="100" width="100"></div>
+                <div class="txt1"><p>Grit helps you track your good and bad habits daily</p></div>
+            </div>  
+
+            <div class="item2">
+                <div class="img2"><img src="./images/kisong.png" alt="kisong written here" height="100" width="100"></div>
+                <div class="txt2"><p>KiSong a music streaming, remixing,editing app</p></div>
+            </div>
+            <div class="item3">
+                <div class="img3"><img src="./images/AIVA.png" alt="aiva written here" height="100" width="100"></div>
+                <div class="txt3"><p>AIVA a virtual assistant living in your phone ready to perform any task </p></div>
+            </div>
+            <div class="item4">
+                <div class="img4"><img src="./images/ki.png" alt="hexgonical dotted logo with Ki company written below" height="100" width="100"></div>
+                <div class="txt4"><p> Ki a giga corporation with various high value susidiaries</p></div>
+            </div>
 
         </div>
-        <section>
-            <p>
+        <section class="sec">
+            <p class="sec-txt1">
                 Do not think that what is hard for you to master is humanly impossible; but if a thing is humanly possible, consider it to be within your reach.
             </p>
-            <p>Marcus Aurelius</p>
+            <p class="sec-txt2">-Marcus Aurelius</p>
         </section>
         <div>
             <div>
