--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
             </p>
             <p class="sec-txt2">-Marcus Aurelius</p>
         </section>
-        <div>
-            <div>
-                <p>Motivation Button!</p>
-                <p>Click this Button to motivate me to achieve my visionary dream</p>
+        <div class="last">
+            <div class="last-sec1">
+                <p class="last-txt1">Motivation Button!</p>
+                <p class="last-txt2">Click this Button to motivate me to achieve my visionary dream</p>
             </div>
-            <div><button>Motivate</button></div>
+            <div class="motivate-button"><button>Motivate</button></div>
         </div>
     </main>
-    <footer>
+    <footer class="footer">
        <p>Copyright &copy; Ki_Karan 2025 </p> 
     </footer>
 </body>
